code highlighting etc

--- a/config.yaml
+++ b/config.yaml
@@ -3,3 +3,6 @@ languageCode: en-us
 title: jshakespeare.com
 params:
   Subtitle: James Shakespeare is a web developer from London. He works at Quartz in New York.
+pygmentsCodefences: true
+pygmentsCodefencesGuessSyntax: true
+pygmentsUseClasses: true
